--- a/proj1.html
+++ b/proj1.html
@@ -8,6 +8,8 @@
 	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+	  <link href="http://fonts.cdnfonts.com/css/a-abrushow" rel="stylesheet">
+                
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  <link rel="icon" type="image/png" href="favicon.png">
 	  <link rel="stylesheet" href="css/custom.css">
@@ -126,7 +128,7 @@
 				<a href="https://www.dextools.io/app/bsc/pair-explorer/0x01c9a482848505f64c6b209b1f16ef8c2d2439f5"><img src="images/img4.png"></a>
 			</div>
 		  </div>
-		  <div class="row">
+		  <div class="row" style="border-bottom: 1px solid #254C84;">
 			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4">
 				<a href="https://poocoin.app/tokens/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea"><img src="images/img5.png"></a>
 			</div>
@@ -161,7 +163,7 @@
 	<div class="container ">
 	  <div class="row">
 		<div class="col-lg-12">
-			<h4 class="seen-pup text-center">ECOSYSTEM TO SERVE THE COMMUNITY</h4>
+			<h4 class="seen-pup">ECOSYSTEM TO SERVE THE COMMUNITY</h4>
 		</div>
 		</div>
 		<div class="row">
@@ -214,7 +216,7 @@
 	<div class="container ">
 		<div class="row">
 		<div class="col-lg-12">
-			<h4 class="seen-pup text-center mb-5">Game of COP V/s Thief</h4>
+			<h4 class="seen-pup mb-5">Game of COP V/s Thief</h4>
 		</div>
 		</div>
 		<div class="row">
@@ -583,7 +585,7 @@ use slippage 10% - 15%.
 			<div class="col-lg-4 col-md-4 col-sm-4 mobile-res">
 				<div class="card">
 					<div class="card-body">
-						<img class="footer-logo" src="images/Puppies-Dog-Final-Logo.png">
+						<img class="footer-logo" src="images/logo.png">
 					</div>
 					<div class="card-footer">
 						<h6 class="dwp"><a class="dwn-wp" target="_blank" href="doc/puppies.pdf">DOWNLOAD WHITEPAPER</a></h6>
@@ -593,7 +595,7 @@ use slippage 10% - 15%.
 		  </div>
 		  <div class="row">
 			<div class="col-lg-8">
-				<h6 class="copyright-text">Copyright @2021 Puppies Doge. All Right Reserved.</h6>
+				<h6 class="copyright-text">Copyright @2021 Doge The Cop. All Right Reserved.</h6>
 			</div>
 			<div class="col-lg-4">
 				<h6 class="privacy">Privacy Policy & Terms Conditions</h6>
