--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 				<a href="https://pancakeswap.finance/swap/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea"><img src="images/img3.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-3">
-				<a href="https://www.dextools.io/app/bsc/pair-explorer/0x01c9a482848505f64c6b209b1f16ef8c2d2439f5"><img src="images/img4.png"></a>
+				<a href="https://www.dextools.io/app/bsc/pair-explorer/0x01c9a482848505f64c6b209b1f16ef8c2d2439f5"><img src="images/dext.png"></a>
 			</div>
 		  </div>
-		  <div class="row" style="border-bottom: 1px solid #254C84;">
+		  <div class="row" >
 			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4">
 				<a href="https://poocoin.app/tokens/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea"><img src="images/img5.png"></a>
 			</div>
@@ -141,9 +141,9 @@
 		  </div>
 		<!-- </div> -->
 		<!-- </section>
-		<section class="sec-3">
-	<div class="container " id="seen"> -->
-	  <div class="row">
+		<section class="sec-3">-->
+	<div class="custom-container"> 
+	  <div class="row bor-bt" style="border-top: 1px solid #254C84;">
 		<div class="col-lg-12">
 			<h4 class="seen-pup text-center mb-5">CONTRACT ADDRESS</h4>
 		</div>
@@ -166,7 +166,7 @@
 			<h4 class="seen-pup">ECOSYSTEM TO SERVE THE COMMUNITY</h4>
 		</div>
 		</div>
-		<div class="row">
+		<div class="row pt-2">
 		<div class="col-lg-4 col-md-4 col-sm-4">
 			<img src="images/dex.png">
 		</div>
@@ -215,15 +215,15 @@
 	<section class="sec-8" id="token">
 	<div class="container ">
 		<div class="row">
-		<div class="col-lg-12">
-			<h4 class="seen-pup mb-5">Game of COP V/s Thief</h4>
+		<div class="col-lg-12" id="goc">
+			<h4 class="seen-pup">Game of COP V/s Thief</h4>
 		</div>
 		</div>
 		<div class="row">
 		<div class="col-lg-6 col-md-6 col-sm-6">
 			<div class="text-sec4">
 				<h6 class="gra-text-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget dapibus senectus morbi lacus, orci duis nunc sed purus. Fermentum vitae viverra quis vulputate. Vel elit tellus sollicitudin amet iaculis. Nec amet, eu commodo volutpat. At odio vitae nullam parturient mauris, non nibh. Condimentum ligula vestibulum imperdiet elit augue accumsan. Fermentum risus sed nulla adipiscing arcu, gravida at sit facilisi.</h6>
-				<h3 style="color: #FA9B27;">COMING SOON</h3>
+				<h3 id="cs">COMING SOON</h3>
 			</div>
 			<div class="row" style="padding-bottom: 20px;">
 				<!-- <div class="col-lg-6 col-md-6 col-sm-6">
