--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 	<html>
 	<head>
 
-<!-- bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="css/custom.css">
+
+
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
 
  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-	   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
 
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-	  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
- -->
-	  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 	  <link href="http://fonts.cdnfonts.com/css/a-abrushow" rel="stylesheet">
                 
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	  <link rel="icon" type="image/png" href="favicon.png">
-	  <link rel="stylesheet" href="css/custom.css">
+	
+	  
 	<style>
 	    
 	    .flex-cp-btn
@@ -232,7 +233,7 @@
 		</div>
 		<div class="row">
 		<div class="col-lg-6 col-md-6 col-sm-6">
-			<div class="text-sec4">
+			<div class="text-sec8">
 				<h6 class="gra-text-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget dapibus senectus morbi lacus, orci duis nunc sed purus. Fermentum vitae viverra quis vulputate. Vel elit tellus sollicitudin amet iaculis. Nec amet, eu commodo volutpat. At odio vitae nullam parturient mauris, non nibh. Condimentum ligula vestibulum imperdiet elit augue accumsan. Fermentum risus sed nulla adipiscing arcu, gravida at sit facilisi.</h6>
 				<h3 id="cs">COMING SOON</h3>
 			</div>
@@ -463,8 +464,8 @@ use slippage 10% - 15%.
 	 
 	  <div class="row pt-5">
 		<div class="col-lg-6 col-md-6 col-sm-6">
-			<div class="card border-dark mb-3" style="max-width: 25rem;">
-  <div class="card-header">Header</div>
+			<div class="card border-dark mb-3" style="max-width: 35rem;">
+  <div class="card-header">Phase1</div>
   <div class="card-body">
     <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
@@ -479,8 +480,8 @@ use slippage 10% - 15%.
 	</div>
 
 		<div class="col-lg-6 col-md-6 col-sm-6">
-			<div class="card border-dark mb-3" style="max-width: 25rem;">
-  <div class="card-header">Header</div>
+			<div class="card border-dark mb-3" style="max-width: 35rem;">
+  <div class="card-header">Phase2</div>
   <div class="card-body ">
     <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
@@ -496,8 +497,8 @@ use slippage 10% - 15%.
 </div>
 <div class="row pt-5">
 		<div class="col-lg-6 col-md-6 col-sm-6">
-<div class="card border-dark mb-3" style="max-width: 25rem;">
-  <div class="card-header">Header</div>
+<div class="card border-dark mb-3" style="max-width: 35rem;">
+  <div class="card-header">Phase3</div>
   <div class="card-body">
    <!--  <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
@@ -514,8 +515,8 @@ use slippage 10% - 15%.
 	</div>
 
 <div class="col-lg-6 col-md-6 col-sm-6">
-	<div class="card border-dark mb-3" style="max-width: 25rem;">
-  <div class="card-header">Header</div>
+	<div class="card border-dark mb-3" style="max-width: 35rem;">
+  <div class="card-header">Phase4</div>
   <div class="card-body ">
     <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
