--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 	<div class="container ">
 		<div class="row">
 		<div class="col-lg-12">
-			<h4 class="seen-pup mb-5">Tokenomic</h4>
+			<h4 class="seen-pup mt-5">Tokenomic</h4>
 		</div>
 		</div>
 		<div class="row" id="tokimg">
@@ -465,8 +465,8 @@ use slippage 10% - 15%.
 	  <div class="row pt-5">
 		<div class="col-lg-6 col-md-6 col-sm-6">
 			<div class="card border-dark mb-3" style="max-width: 35rem;">
-  <div class="card-header">Phase1</div>
-  <div class="card-body">
+  <!-- <div class="card-header">Phase1</div> -->
+  <div class="card-body" id="card1">
     <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Marketing push</li>
@@ -476,13 +476,14 @@ use slippage 10% - 15%.
     	<li>Presale announcement</li>
     </ul>
   </div>
+  <div class="card-header">Phase1</div>
  </div>
 	</div>
 
 		<div class="col-lg-6 col-md-6 col-sm-6">
 			<div class="card border-dark mb-3" style="max-width: 35rem;">
-  <div class="card-header">Phase2</div>
-  <div class="card-body ">
+  <!-- <div class="card-header">Phase2</div> -->
+  <div class="card-body " id="card2">
     <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Successful Launch</li>
@@ -492,14 +493,15 @@ use slippage 10% - 15%.
     	<li>Influencer marketing push</li>
     </ul>
   </div>
+    <div class="card-header">Phase2</div>
 </div>
 		</div>
 </div>
 <div class="row pt-5">
 		<div class="col-lg-6 col-md-6 col-sm-6">
 <div class="card border-dark mb-3" style="max-width: 35rem;">
-  <div class="card-header">Phase3</div>
-  <div class="card-body">
+  <!-- <div class="card-header">Phase3</div> -->
+  <div class="card-body" id="card3">
    <!--  <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Huge Marketing Campaign
@@ -510,14 +512,15 @@ use slippage 10% - 15%.
     	<li>Expansion of core team</li>
     </ul>
   </div>
+  <div class="card-header">Phase3</div>
 </div>	
 	
 	</div>
 
 <div class="col-lg-6 col-md-6 col-sm-6">
 	<div class="card border-dark mb-3" style="max-width: 35rem;">
-  <div class="card-header">Phase4</div>
-  <div class="card-body ">
+  
+  <div class="card-body " id="card4">
     <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Partnerships</li>
@@ -528,6 +531,7 @@ use slippage 10% - 15%.
     	<li>Big manual burn</li>
     </ul>
   </div>
+  <div class="card-header">Phase4</div>
 </div>
 	</div>
 </div>
