--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@ use slippage 10% - 15%.
 				<h4 class="fot-text">CONNECT WITH US</h4>
 				<span class="footer-icon"><a href="https://t.me/Puppiesdoge"><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
 				<span class="footer-icon"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
-				<span class="footer-icon"><img src="images/Icons/discord.svg" class="discord"></span>
+				<span class="footer-icon"><img src="images/discord.svg" class="discord"></span>
 				<span class="footer-icon"><a href="https://medium.com/@puppiesdoge"><i class="fa fa-medium fot" aria-hidden="true"></i></a></span>
 				<span class="footer-icon"><a href="https://www.reddit.com/user/PuppiesDoge"><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span>
 				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span>
@@ -656,7 +656,7 @@ use slippage 10% - 15%.
 			<div class="col-lg-4 col-md-4 col-sm-4 mobile-res">
 				<div class="card">
 					<div class="card-body">
-						<img class="footer-logo" src="images/logo.png">
+						<img class="footer-logo" src="images/Logo.png">
 					</div>
 					<div class="card-footer">
 						<h6 class="dwp"><a class="dwn-wp" target="_blank" href="doc/puppies.pdf">DOWNLOAD WHITEPAPER</a></h6>
