--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 
-	  <link href="http://fonts.cdnfonts.com/css/a-abrushow" rel="stylesheet">
+	  <link href="https://fonts.cdnfonts.com/css/a-abrushow" rel="stylesheet">
                 
 	
 	  
