--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 
 	  <link href="https://fonts.cdnfonts.com/css/a-abrushow" rel="stylesheet">
-                
+     <!--  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> -->          
 	
 	  
 	<style>
@@ -465,9 +465,7 @@ use slippage 10% - 15%.
 	  <div class="row pt-5">
 		<div class="col-lg-6 col-md-6 col-sm-6">
 			<div class="card border-dark mb-3" style="max-width: 35rem;">
-  <!-- <div class="card-header">Phase1</div> -->
   <div class="card-body" id="card1">
-    <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Marketing push</li>
     	<li>Website launch</li>
@@ -482,9 +480,7 @@ use slippage 10% - 15%.
 
 		<div class="col-lg-6 col-md-6 col-sm-6">
 			<div class="card border-dark mb-3" style="max-width: 35rem;">
-  <!-- <div class="card-header">Phase2</div> -->
   <div class="card-body " id="card2">
-    <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Successful Launch</li>
     	<li>Dextools Trending</li>
@@ -500,9 +496,7 @@ use slippage 10% - 15%.
 <div class="row pt-5">
 		<div class="col-lg-6 col-md-6 col-sm-6">
 <div class="card border-dark mb-3" style="max-width: 35rem;">
-  <!-- <div class="card-header">Phase3</div> -->
   <div class="card-body" id="card3">
-   <!--  <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Huge Marketing Campaign
 </li>
@@ -521,7 +515,6 @@ use slippage 10% - 15%.
 	<div class="card border-dark mb-3" style="max-width: 35rem;">
   
   <div class="card-body " id="card4">
-    <!-- <h5 class="card-title">Dark card title</h5> -->
     <ul class="card-text">
     	<li>Partnerships</li>
     	<li>Football Ads on big games</li>
@@ -587,7 +580,8 @@ use slippage 10% - 15%.
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false">What makes Doge the Cope different from the other meme coins?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false">What makes Doge the Cope different from the other meme coins?
+              	<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
@@ -596,7 +590,7 @@ use slippage 10% - 15%.
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed" aria-expanded="false">How does the transaction tax work?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed" aria-expanded="false">How does the transaction tax work?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
@@ -605,7 +599,7 @@ use slippage 10% - 15%.
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed" aria-expanded="false">When will you burn more tokens?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed" aria-expanded="false">When will you burn more tokens?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
@@ -614,7 +608,7 @@ use slippage 10% - 15%.
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed" aria-expanded="false">Why do I get an error when I try to swap? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed" aria-expanded="false">Why do I get an error when I try to swap? <i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
@@ -624,7 +618,7 @@ use slippage 10% - 15%.
 
             <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" aria-expanded="false">What is a deflationary token? 
-              	<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i>
+              	<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i>
               </a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
