--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 					<img src="images/Donut-Chart-Part1.png" class="sd-img">
 				</div>
 				<div class="col-lg-8 col-md-8 col-sm-8">
-				<h6 class="gra-text-p">6% reward for holder on each buy and sell transaction.</h6>
+				<h6 class="gra-text-p">6% Rewards for holder on each buy and sell transaction.</h6>
 			
 				</div>
 			</div>
@@ -459,7 +459,7 @@ use slippage 10% - 15%.
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false">What makes Doge the Cope different from the other meme coins?
+             <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false"> <img src="images/one.png" class="faqimg" />What makes Doge the Cope different from the other meme coins?
               	<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
@@ -467,9 +467,9 @@ use slippage 10% - 15%.
                 </p>
               </div>
             </li>
-
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed" aria-expanded="false">How does the transaction tax work?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
+              <!-- <i class="bx bx-help-circle icon-help"></i>  -->
+              <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed" aria-expanded="false"> <img src="images/two.png" class="faqimg" />How does the transaction tax work?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
@@ -478,7 +478,7 @@ use slippage 10% - 15%.
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed" aria-expanded="false">When will you burn more tokens?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
+              <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed" aria-expanded="false"> <img src="images/three.png" class="faqimg" />When will you burn more tokens?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
@@ -487,7 +487,7 @@ use slippage 10% - 15%.
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-             <span class="icon-help">4. </span><a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed" aria-expanded="false">Why do I get an error when I try to swap? <i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
+             <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed" aria-expanded="false"> <img src="images/four.png" class="faqimg" />Why do I get an error when I try to swap? <i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
@@ -496,7 +496,7 @@ use slippage 10% - 15%.
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
-             <i class="bx bx-help-circle icon-help"></i><a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" aria-expanded="false">What is a deflationary token? 
+            <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" aria-expanded="false"> <img src="images/five.png" class="faqimg" />What is a deflationary token? 
              	<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i>
               </a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
