--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	<div class="container" id="seen">
 		<div class="row">
 		<div class="col-lg-12">
-			<h4 class="seen-pup text-center mb-5">AS SEEN IN</h4>
+			<h3 class="gra-text text-center" style="margin-top: 4%">AS SEEN IN</h3>
 		</div>
 		</div>
 		  <div class="row">
@@ -144,7 +144,7 @@
 	<div class="custom-container"> 
 	  <div class="row bor-bt" style="border-top: 1px solid #254C84;">
 		<div class="col-lg-12">
-			<h4 class="seen-pup text-center mb-5">CONTRACT ADDRESS</h4>
+			<h3 class="gra-text text-center mb-5">CONTRACT ADDRESS</h3>
 		</div>
 		</div>
 		<div class="row">
@@ -395,7 +395,7 @@ use slippage 10% - 15%.
 	</div>
      <div class="col-lg-2 col-md-2 col-sm-2 col-2 col-xs-4">
 			<div class="imgtop">
-				<img src="images/Top.png" class="mymg" height="100px" />	
+				<img src="images/Top.png" class="mymg" height="150px" />	
 			</div>	
      </div>
 	<div class="col-lg-5 col-md-5 col-sm-5">
@@ -430,7 +430,7 @@ use slippage 10% - 15%.
 
 <div class="col-lg-2 col-md-2 col-sm-2 col-2 col-xs-4">
 			<div class="imgbot">
-				<img src="images/Bottom.png" class="mymg" height="100px" />	
+				<img src="images/Bottom.png" class="mymg" height="150px" />	
 			</div>	
 		</div>
 
