--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ use slippage 10% - 15%.
 	<footer class="footer">
 		<div class="custom-container">
 		  <div class="row pb-4 bor-bt">
-			<div class="col-lg-8 col-md-8 col-sm-8">
+			<div class="col-lg-8 col-md-12 col-sm-12">
 				<h4 class="fot-text">CONNECT WITH US</h4>
 				<span class="footer-icon"><a href="https://t.me/Puppiesdoge"><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
 				<span class="footer-icon"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
@@ -526,8 +526,8 @@ use slippage 10% - 15%.
 				<span class="footer-icon"><a href="https://www.reddit.com/user/PuppiesDoge"><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span>
 				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 mobile-res">
-				<div class="card">
+			<div class="col-lg-4 col-md-12 col-sm-12 mobile-res">
+				<div class="card foot-card">
 					<div class="card-body">
 						<img class="footer-logo" src="images/Logo.png">
 					</div>
@@ -538,16 +538,16 @@ use slippage 10% - 15%.
 			</div>
 		  </div>
 		  <div class="row">
-			<div class="col-lg-8">
+			<div class="col-lg-8 col-md-12 col-sm-12">
 				<h6 class="copyright-text">Copyright @2021 Doge The Cop. All Right Reserved.</h6>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-md-12 col-sm-12">
 				<h6 class="privacy">Privacy Policy & Terms Conditions</h6>
 			</div>
 		  </div>
 		</div>
-
 	</footer>
+
 	<script>
 	window.onscroll = function() {myFunction()};
 
