mob view changes

--- a/index.html
+++ b/index.html
@@ -98,27 +98,27 @@
 		</div>
 		  <div class="row">
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-				<a href="https://poocoin.app/tokens/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea"><img src="images/img1.png"></a>
+				<a href=""><img src="images/img1.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-				<a href=" https://bscscan.com/token/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea#balances"><img src="images/img2.png"></a>
+				<a href=""><img src="images/img2.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-				<a href="https://pancakeswap.finance/swap/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea"><img src="images/img3.png"></a>
+				<a href=""><img src="images/img3.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-				<a href="https://www.dextools.io/app/bsc/pair-explorer/0x01c9a482848505f64c6b209b1f16ef8c2d2439f5"><img src="images/dext.png"></a>
+				<a href=""><img src="images/dext.png"></a>
 			</div>
 		  </div>
 		  <div class="row">
-			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4 ">
-				<a href="https://poocoin.app/tokens/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea"><img src="images/img5.png"></a>
+			<div class="img-sec2 col-lg-4 col-md-4 col-sm-6 col-xs-6">
+				<a href=""><img src="images/img5.png"></a>
 			</div>
-			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4 ">
-				<a href=" https://bscscan.com/token/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea#balances"><img src="images/img6.png"></a>
+			<div class="img-sec2 col-lg-4 col-md-4 col-sm-6 col-xs-6">
+				<a href=" "><img src="images/img6.png"></a>
 			</div>
-			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4">
-				<a href="https://pancakeswap.finance/swap/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea"><img src="images/img7.png"></a>
+			<div class="img-sec2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+				<a href=""><img src="images/img7.png"></a>
 			</div>
 		  </div>
 	<div class="custom-container"> 
@@ -130,10 +130,11 @@
 		<div class="row">
 		<div class="col-lg-1 col-md-1 col-sm-1">
 		</div>
-		<div class="con_add col-lg-10 col-md-10 col-sm-10">
-			<p class="ppd ">DTC:</p><input type="text" class="form-control set-fc" value="xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx" id="myInput"/><button type="button" class="btn btn-p choco_bar copy_btn" onclick="btn_clickcopy()">Copy</button>
+		<div class="con_add col-lg-10 col-md-10 col-sm-11">
+			<p class="ppd ">DTC:</p><input type="text" class="form-control set-fc" value="xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx" id="myInput"/>
 		</div>
-		<div class="col-lg-1 col-md-1 col-sm-1">
+		<div class="col-lg-1 col-md-1 col-sm-12">
+			<button type="button" class="btn btn-p choco_bar copy_btn" onclick="btn_clickcopy()">Copy</button>
 		</div>
 	  </div>
 	</div>
@@ -191,7 +192,16 @@
 		</div>
 		</div>
 		<div class="row">
-		<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="hide1">
+			<img src="images/CopDoge.png">
+	</div>
+	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="hide1">
+			<img src="images/ThiefDoge.png">
+	</div>
+		</div>
+
+		<div class="row">
+		<div class="col-lg-6 col-md-6 col-sm-12">
 			<div class="text-sec8">
 				<h6 class="gra-text-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget dapibus senectus morbi lacus, orci duis nunc sed purus. Fermentum vitae viverra quis vulputate. Vel elit tellus sollicitudin amet iaculis. Nec amet, eu commodo volutpat. At odio vitae nullam parturient mauris, non nibh. Condimentum ligula vestibulum imperdiet elit augue accumsan. Fermentum risus sed nulla adipiscing arcu, gravida at sit facilisi.</h6>
 				<h3 id="cs">COMING SOON</h3>
@@ -200,10 +210,10 @@
 			<img src="images/play.png">
 	        </div>
 		</div>	
-	<div class="col-lg-3 col-md-3 col-sm-3">
+	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="show1">
 			<img src="images/CopDoge.png">
 	</div>
-	<div class="col-lg-3 col-md-3 col-sm-3">
+	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="show1">
 			<img src="images/ThiefDoge.png">
 	</div>
 	</div>
