--- a/index.html
+++ b/index.html
@@ -261,6 +261,9 @@
 		</div>
 		</div>
 	  <div class="row pt-5">
+	  	<div class="col-lg-4 col-md-12 col-sm-12" id="hide1">
+			<img src="images/Donut-Chart.png" id="pie">
+		</div>
 		<div class="col-lg-8 col-md-12 col-sm-12">
 			<div class="row pb-5">
 				<div class="col-lg-3 col-md-3 col-sm-3">
@@ -290,7 +293,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4 col-md-12 col-sm-12">
+		<div class="col-lg-4 col-md-12 col-sm-12" id="show1">
 			<img src="images/Donut-Chart.png" id="pie">
 		</div>
 	  </div>
