--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 	          <a  href="#token">Tokenomic</span></a>
 	         
 	        </li>
-	        <li><a target="_blank" href="doc/puppies.pdf">Whitepaper</a></li>
+	        <li><a target="_blank" href="">Whitepaper</a></li>
 	        <li><a href="#buy">How To Buy?</a></li>
-	        <li><a target="_blank" href="https://poocoin.app/tokens/0x55b52a5ada6b938a482ce15dd3b0b00ba138bdea">Chart</a></li>
+	        <li><a target="_blank" href="">Chart</a></li>
 	      </ul>
 	      
 	    </div>
@@ -140,7 +140,7 @@
 	</div>
     </section>
 
-	<section class="sec-3" id="token">
+	<section class="sec-3">
 	<div class="container sec3">
 	  <div class="row">
 		<div class="col-lg-12 pb-3">
@@ -184,7 +184,7 @@
 	</div>
 	</section>
 
-	<section class="sec-8" id="token">
+	<section class="sec-8" >
 	<div class="container ">
 		<div class="row">
 		<div class="col-lg-12" id="goc">
@@ -515,11 +515,11 @@ use slippage 10% - 15%.
 		  <div class="row pb-4 bor-bt">
 			<div class="col-lg-8 col-md-12 col-sm-12">
 				<h4 class="fot-text">CONNECT WITH US</h4>
-				<span class="footer-icon"><a href="https://t.me/Puppiesdoge"><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
+				<span class="footer-icon"><a href=""><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
 				<span class="footer-icon"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
 				<span class="footer-icon"><img src="images/discord.svg" class="discord"></span>
-				<span class="footer-icon"><a href="https://medium.com/@puppiesdoge"><i class="fa fa-medium fot" aria-hidden="true"></i></a></span>
-				<span class="footer-icon"><a href="https://www.reddit.com/user/PuppiesDoge"><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span>
+				<span class="footer-icon"><a href=""><i class="fa fa-medium fot" aria-hidden="true"></i></a></span>
+				<span class="footer-icon"><a href=""><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span>
 				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span>
 			</div>
 			<div class="col-lg-4 col-md-12 col-sm-12 mobile-res">
@@ -528,7 +528,7 @@ use slippage 10% - 15%.
 						<img class="footer-logo" src="images/Logo.png">
 					</div>
 					<div class="card-footer">
-						<h6 class="dwp"><a class="dwn-wp" target="_blank" href="doc/puppies.pdf">DOWNLOAD WHITEPAPER</a></h6>
+						<h6 class="dwp"><a class="dwn-wp" target="_blank" href="">DOWNLOAD WHITEPAPER</a></h6>
 					</div>
 				</div>
 			</div>
