--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 				<a href=""><img src="images/img7.png"></a>
 			</div>
 		  </div>
+		  <div class="bordertop" style="border-top: 1px solid #254C84;">
+		</div>
 	<div class="custom-container"> 
-	  <div class="row bor-bt" style="border-top: 1px solid #254C84;">
+	  <div class="row bor-bt">
 		<div class="col-lg-12">
 			<h3 class="gra-text text-center mb-5">CONTRACT ADDRESS</h3>
 		</div>
 		</div>
 		<div class="row">
-		<div class="col-lg-1 col-md-1 col-sm-1">
-		</div>
-		<div class="con_add col-lg-10 col-md-10 col-sm-11">
+		<div class="con_add col-lg-10 col-md-10 col-sm-12">
 			<p class="ppd ">DTC:</p><input type="text" class="form-control set-fc" value="xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx" id="myInput"/>
 		</div>
 		<div class="col-lg-1 col-md-1 col-sm-12">
@@ -247,7 +247,7 @@
 	<div class="container ">
 	  <div class="row">
 		<div class="col-lg-12">
-			<h4 class="seen-pup text-center">BUY AND SELL DISTRIBUTION</h4>
+			<h4 class="seen-pup">BUY AND SELL DISTRIBUTION</h4>
 		</div>
 		</div>
 	  <div class="row pt-5">
@@ -448,8 +448,8 @@ use slippage 10% - 15%.
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-             <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false"> <img src="images/one.png" class="faqimg" />What makes Doge the Cope different from the other meme coins?
-              	<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
+             <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false"><img src="images/one.png" class="faqimg" /> What makes Doge the Cope different from the other meme coins?
+              	<i class="fa fa-thin fa-plus icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
                   Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
