footer icons center

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ use slippage 10% - 15%.
 	<footer class="footer">
 		<div class="custom-container">
 		  <div class="row pb-4 bor-bt">
-			<div class="col-lg-8 col-md-12 col-sm-12">
+			<div class="col-lg-8 col-md-12 col-sm-12" id="connectus">
 				<h4 class="fot-text">CONNECT WITH US</h4>
 				<span class="footer-icon"><a href=""><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
 				<span class="footer-icon"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
