--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+
+<link href="http://fonts.cdnfonts.com/css/kavoon" rel="stylesheet">
+
 	
-	<title>Doge The Cop
-	</title>
+	<title>Doge The Cop 
+	</title><img rel="icon" type="image/x-icon" href="/images/footerdog.png">
 	</head>
 
 	<body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -43,11 +46,11 @@
 		  <ul class="nav navbar-nav navbar-right">
 	       <li class="active"><a href="#home">Home</a></li>
 	        <li class="dropdown">
-	          <a  href="#token">Tokenomic</span></a>	         
+	          <a  href="#gamecop">P2E Gaming</span></a>	         
 	        </li>
-	        <li><a target="_blank" href="">Whitepaper</a></li>
-	        <li><a href="#buyhow">How To Buy?</a></li>
-	        <li><a target="_blank" href="">Chart</a></li>
+	        <li><a target="_blank" href="#eco">Ecosystem</a></li>
+	        <li><a href="#faq">FAQ</a></li>
+	        <li><a target="_blank" href="">WhitePaper</a></li>
 	      </ul>	      
 	    </div>
 	  </div>
@@ -62,7 +65,7 @@
 		  		<img src="images/BannerCop.png" id="welimg">
 		  	</div>
 			<div class="col-lg-7 col-md-7 col-sm-12" id="welpg">
-			<h3 class="wel-pup">WELCOME TO DOGE THE COP</h3>
+			<h3 class="wel-pup">Welcome to Doge The Cop</h3>
 			<p class="wel-para">One of the most highly rewarded tokens with a reward of 11%. The longer you stay,the more you earn.</p>
 			<p class="wel-para1">Pre-sales starts from 15th December</p>
 			<div class="row">
@@ -83,7 +86,7 @@
 	<div class="container" id="seen">
 		<div class="row">
 		<div class="col-lg-12">
-			<h3 class="gra-text text-center" style="margin-top: 4%">AS SEEN IN</h3>
+			<h3 class="gra-text text-center" style="margin-top: 4%">As Seen In</h3>
 		</div>
 		</div>
 		  <div class="row">
@@ -101,13 +104,13 @@
 			</div>
 		  </div>
 		  <div class="row">
-			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="img-sec2 col-lg-4 col-md-4 col-sm-6 col-xs-6">
 				<a href=""><img src="images/img5.png"></a>
 			</div>
-			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="img-sec2 col-lg-4 col-md-4 col-sm-6 col-xs-6">
 				<a href=" "><img src="images/img6.png"></a>
 			</div>
-			<div class="img-sec2 col-lg-4 col-md-4 col-sm-4 col-xs-4">
+			<div class="img-sec2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<a href=""><img src="images/img7.png"></a>
 			</div>
 		  </div>
@@ -116,7 +119,7 @@
 	<div class="custom-container"> 
 	  <div class="row bor-bt">
 		<div class="col-lg-12">
-			<h3 class="gra-text text-center mb-5">CONTRACT ADDRESS</h3>
+			<h3 class="gra-text text-center mb-5">Contract Address</h3>
 		</div>
 		</div>
 		<div class="row">
@@ -130,11 +133,11 @@
 	</div>
     </section>
 
-	<section class="sec-3">
+	<section class="sec-3" id="eco">
 	<div class="container sec3">
 	  <div class="row">
 		<div class="col-lg-12 pb-3">
-			<h4 class="seen-pup">ECOSYSTEM TO SERVE THE COMMUNITY</h4>
+			<h4 class="seen-pup">Ecosystem To Serve The Community</h4>
 		</div>
 	   </div>
 	   <!-- <div class="row">
@@ -174,11 +177,11 @@
 	</div>
 	</section>
 
-	<section class="sec-8" >
+	<section class="sec-8" id="gamecop">
 	<div class="container ">
 		<div class="row">
 		<div class="col-lg-12" id="goc">
-			<h4 class="seen-pup">Game of COP V/s Thief</h4>
+			<h4 class="seen-gm" style="color: white;">Game of COP V/s Thief</h4>
 		</div>
 		</div>
 		<div class="row">
@@ -193,8 +196,14 @@
 		<div class="row">
 		<div class="col-lg-6 col-md-6 col-sm-12">
 			<div class="text-sec8">
-				<h6 class="gra-text-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget dapibus senectus morbi lacus, orci duis nunc sed purus. Fermentum vitae viverra quis vulputate. Vel elit tellus sollicitudin amet iaculis. Nec amet, eu commodo volutpat. At odio vitae nullam parturient mauris, non nibh. Condimentum ligula vestibulum imperdiet elit augue accumsan. Fermentum risus sed nulla adipiscing arcu, gravida at sit facilisi.</h6>
-				<h3 id="cs">COMING SOON</h3>
+				<h6 class="gra-text-p" style="color: white;">Inspired by Battlefield Hardline, Doge the Cop, will be a police officer taking down criminals. You are the law. You have various ways to pursue those criminals and arrest them. The most fun factors about this game is that it’s different than every other Battlefield game. You can choose to be stealthy or loud, lethal or non-lethal, giving you various ways you can choose to handle sticky situations.</h6>
+				<ul class="gra-text-p" style="color: white;">
+					<li>Single/Multi-Player</li>
+					<li>Earn Rewards while playing</li>
+					<li>Get Ammunition and Power with NFT purchase</li>
+					<li>3D Immerce experience and much more</li>
+				</ul>
+				<h3 id="cs">Coming Soon</h3>
 			</div>
 			<div class="row" style="padding-bottom: 30px;">
 			<img src="images/play.png">
@@ -247,7 +256,7 @@
 	<div class="container ">
 	  <div class="row">
 		<div class="col-lg-12">
-			<h4 class="seen-pup">BUY AND SELL DISTRIBUTION</h4>
+			<h4 class="seen-pup">Buy And Sell Distribution</h4>
 		</div>
 		</div>
 	  <div class="row pt-5">
@@ -448,49 +457,49 @@ use slippage 10% - 15%.
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-             <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false"><img src="images/one.png" class="faqimg" /> What makes Doge the Cope different from the other meme coins?
+             <a data-bs-toggle="collapse" class="collapse collapsed" data-bs-target="#faq-list-1" aria-expanded="false"><img src="images/one.png" class="faqimg" /> What is Doge the Cop?
               	<i class="fa fa-thin fa-plus icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  Doge the Cop is Disney inspired Metaverse gaming not just a fun little rewarding token, but a futuristic blockchain video game that will allow you to earn the token while playing! Yes, earn while you play.
                 </p>
               </div>
             </li>
             <li data-aos="fade-up" data-aos-delay="100">
               <!-- <i class="bx bx-help-circle icon-help"></i>  -->
-              <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed" aria-expanded="false"> <img src="images/two.png" class="faqimg" />How does the transaction tax work?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
+              <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed" aria-expanded="false"> <img src="images/two.png" class="faqimg" />What is Popular ’1 billion Token Burn’?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list" style="">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  To increase the price of the token and reward the token holders, we will do quarterly Burns, with the 1st one to happen in January 2022. In January 2021, we will burn 1 billion Tokens
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed" aria-expanded="false"> <img src="images/three.png" class="faqimg" />When will you burn more tokens?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
+              <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed" aria-expanded="false"> <img src="images/three.png" class="faqimg" />Why is Doge the Cop a deflationary token?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                  Inspired from magical run of SAFEMOON, Doge the Cop is a deflationary token that was created to solve the problem with ‘farming’ rewards, where early stakers earn from the highest APYs and newcomers don’t earn much.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-             <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed" aria-expanded="false"> <img src="images/four.png" class="faqimg" />Why do I get an error when I try to swap? <i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
+             <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed" aria-expanded="false"> <img src="images/four.png" class="faqimg" />Where can I buy ‘Doge the Cop’?<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
+                  Shiba Games will be available on PancakeSwap first. Afterwards, the Shiba Games team plans to expand to other exchanges like Coinsbit, CEX.IO, BitMart and Binance.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
-            <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" aria-expanded="false"> <img src="images/five.png" class="faqimg" />What is a deflationary token? 
+            <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed" aria-expanded="false"> <img src="images/five.png" class="faqimg" />Who’s behind ‘Doge the Cop’?
              	<i class="fa fa-thin fa-plus  icon-show"></i><i class="fa fa-thin fa-minus icon-close"></i>
               </a>
               <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                  Doge the Cop is a metaverse gaming concept by Wharton Business School Alumnus and has strong advisory team of.
                 </p>
               </div>
             </li>
