--- a/index.html
+++ b/index.html
@@ -197,16 +197,16 @@
 		<div class="col-lg-6 col-md-6 col-sm-12">
 			<div class="text-sec8">
 				<h6 class="gra-text-p" style="color: white;">Inspired by Battlefield Hardline, Doge the Cop, will be a police officer taking down criminals. You are the law. You have various ways to pursue those criminals and arrest them. The most fun factors about this game is that it’s different than every other Battlefield game. You can choose to be stealthy or loud, lethal or non-lethal, giving you various ways you can choose to handle sticky situations.</h6>
-				<ul class="gra-text-p" style="color: white;">
-					<li>Single/Multi-Player</li>
-					<li>Earn Rewards while playing</li>
-					<li>Get Ammunition and Power with NFT purchase</li>
-					<li>3D Immerce experience and much more</li>
+				<ul class="gra-text-p" style="color: white; margin-left: -20px;">
+					<li style="padding: 0px;">Single/Multi-Player</li>
+					<li style="padding: 0px;">Earn Rewards while playing</li>
+					<li style="padding: 0px;">Get Ammunition and Power with NFT purchase</li>
+					<li style="padding: 0px;">3D Immerce experience and much more</li>
 				</ul>
 				<h3 id="cs">Coming Soon</h3>
 			</div>
 			<div class="row" style="padding-bottom: 30px;">
-			<img src="images/play.png">
+			<img src="images/play.png" style="margin-left: 15px;">
 	        </div>
 		</div>	
 	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="show1">
@@ -380,11 +380,11 @@ use slippage 10% - 15%.
 		<div class="col-lg-5 col-md-5 col-sm-12">
 			<div class="card border-dark mb-3" style="max-width: 35rem;">
   <div class="card-body" id="card1">
-    <ul class="card-text">
+    <ul class="card-text" style="height: 200px;">
     	<li>Marketing push</li>
     	<li>Website launch</li>
-    	<li>Huge Influencers</li>
-    	<li>5k+ telegram members</li>
+    	<li>WhitePaper Release</li>
+    	<li>3k+ telegram members</li>
     	<li>Presale announcement</li>
     </ul>
   </div>
@@ -400,11 +400,12 @@ use slippage 10% - 15%.
 	 <div class="card border-dark mb-3" style="max-width: 35rem;">
      <div class="card-body " id="card2">
       <ul class="card-text">
-    	<li>Successful Launch</li>
+    	<li>Successful Pre-Sales</li>
     	<li>Dextools Trending</li>
     	<li>Reddit Trending</li>
-    	<li>Coinhunt, Coinsniper etc.</li>
-    	<li>Influencer marketing push</li>
+    	<li>PanCake Swap Launch</li>
+    	<li>CoinMarketCap Launch</li>
+    	<li>Manual Burn</li>
      </ul>
    </div>
    <div class="card-header">Phase2</div>
@@ -416,9 +417,10 @@ use slippage 10% - 15%.
      <div class="card-body" id="card3">
      <ul class="card-text">
     	<li>Huge Marketing Campaign</li>
-    	<li>Meme contest</li>
+    	<li>NFT Launch</li>
     	<li>Listings on CEX</li>
-    	<li>Football Ads on big games</li>
+    	<li>Gaming Ads</li>
+    	<li>Partnership Expansion</li>
     	<li>Expansion of core team</li>
     </ul>
   </div>
@@ -437,8 +439,9 @@ use slippage 10% - 15%.
   <div class="card-body " id="card4">
     <ul class="card-text">
     	<li>Partnerships</li>
-    	<li>Football Ads on big games</li>
-    	<li>Release of the 2nd Game</li>
+    	<li>Massive Social Media Outreach</li>
+    	<li>Gaming Launch</li>
+    	<li>NFT Minting Launch</li>
     	<li>Increased Marketing push</li>
     	<li>Big manual burn</li>
     </ul>
@@ -519,10 +522,10 @@ use slippage 10% - 15%.
 				<h4 class="fot-text">CONNECT WITH US</h4>
 				<span class="footer-icon"><a href=""><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
 				<span class="footer-icon"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
-				<span class="footer-icon"><img src="images/discord.svg" class="discord"></span>
+				<!-- <span class="footer-icon"><img src="images/discord.svg" class="discord"></span> -->
 				<span class="footer-icon"><a href=""><i class="fa fa-medium fot" aria-hidden="true"></i></a></span>
-				<span class="footer-icon"><a href=""><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span>
-				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span>
+				<!-- <span class="footer-icon"><a href=""><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span>
+				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span> -->
 			</div>
 			<div class="col-lg-4 col-md-12 col-sm-12 mobile-res">
 				<div class="card foot-card">
