--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
 
-<link href="http://fonts.cdnfonts.com/css/kavoon" rel="stylesheet">
+<link href="https://fonts.cdnfonts.com/css/kavoon" rel="stylesheet">
 
 	
 	<title>Doge The Cop 
