--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	
 	<title>Doge The Cop 
-	</title><img rel="icon" type="image/x-icon" href="/images/footerdog.png">
+	</title><link rel="icon" type="image/png" href="./images/footerdog.png">
 	</head>
 
 	<body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -48,7 +48,7 @@
 	        <li class="dropdown">
 	          <a  href="#gamecop">P2E Gaming</span></a>	         
 	        </li>
-	        <li><a target="_blank" href="#eco">Ecosystem</a></li>
+	        <li><a href="#eco">Ecosystem</a></li>
 	        <li><a href="#faq">FAQ</a></li>
 	        <li><a target="_blank" href="">WhitePaper</a></li>
 	      </ul>	      
@@ -65,9 +65,9 @@
 		  		<img src="images/BannerCop.png" id="welimg">
 		  	</div>
 			<div class="col-lg-7 col-md-7 col-sm-12" id="welpg">
-			<h3 class="wel-pup">Welcome to Doge The Cop</h3>
-			<p class="wel-para">One of the most highly rewarded tokens with a reward of 11%. The longer you stay,the more you earn.</p>
-			<p class="wel-para1">Pre-sales starts from 15th December</p>
+			<h3 class="wel-pup">World's 1st Meme Token with NFT & Metaverse Gaming</h3>
+			<p class="wel-para">Metaverse Gaming based on PLAY2EARN gaming concept. One of the most highly rewarded tokens with a reward of 11%. The longer you stay, the more you earn.</p>
+			<p class="wel-para1">Pre-sales starts from 23rd December</p>
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12">
 					<div class="wel-btn">				
@@ -155,22 +155,22 @@
 		<div class="col-lg-4 col-md-4 col-sm-12">
 			<img src="images/dex.png" id="sec3Img">
 			<div class="text-sec3">
-				<h3 class="gra-text">DEX</h3>
-				<h6 class="gra-text-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget dapibus senectus morbi lacus.</h6>
+				<h3 class="gra-text">Deflationary</h3>
+				<h6 class="gra-text-p">Deflationary DEX token that will have a burn mechanism to ensure there is always a limited supply .</h6>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-4 col-sm-12">
 			<img src="images/netm.png" id="sec3Img">
 			<div class="text-sec3">
-				<h3 class="gra-text">NFT MARketplace</h3>
-				<h6 class="gra-text-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget dapibus senectus viverra quis vulputate vulputate. Vel elit.</h6>
+				<h3 class="gra-text">NFT Minting</h3>
+				<h6 class="gra-text-p">NFT Minting for Meta Doge the Cop will be live soon. Gamers will be able to buy NFTs and gain extra powers to win.</h6>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-4 col-sm-12">
 			<img src="images/netg.png" id="sec3Img">
 			<div class="text-sec3">
-				<h3 class="gra-text">NFT GAMEs</h3>
-				<h6 class="gra-text-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget dapibus senectus morbi lacus, orci duis nunc sed. Vel elit.</h6>
+				<h3 class="gra-text">Metaverse Game</h3>
+				<h6 class="gra-text-p">Inspired by Battlefield Hardline gaming concept will enable gamers to choose the cop they want and hunt down bad Doges and transform their best performances.</h6>
 			</div>
 		</div>		
 	  </div>	  
@@ -181,7 +181,7 @@
 	<div class="container ">
 		<div class="row">
 		<div class="col-lg-12" id="goc">
-			<h4 class="seen-gm" style="color: white;">Game of COP V/s Thief</h4>
+			<h4 class="seen-gm" style="color: white;">PlAY 2 EARN - Doge the COP</h4>
 		</div>
 		</div>
 		<div class="row">
@@ -210,10 +210,10 @@
 	        </div>
 		</div>	
 	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="show1">
-			<img src="images/CopDoge.png">
+			<img src="images/CopDoge.png" class="playimg">
 	</div>
 	<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6" id="show1">
-			<img src="images/ThiefDoge.png">
+			<img src="images/ThiefDoge.png" class="playimg">
 	</div>
 	</div>
 	</div>
@@ -231,7 +231,7 @@
          <img src="images/RewardCop.png" id="puppy">
          <div class="text-sec4">
 				<h3 class="gra-text">6% Rewards for holder</h3>
-				<h6 class="gra-text-p">Simply by holding DTC token, 6% of each transaction on Buy and Sell will be redistributed to all holders.</h6>
+				<h6 class="gra-text-p">Simply by holding DCOP token, 6% of each transaction on Buy and Sell will be redistributed to all holders.</h6>
 			</div>
 		</div>
 		<div class="col-lg-4 col-md-4 col-sm-12">
@@ -244,8 +244,8 @@
 		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 			<img src="images/DonationCop.png" id="puppy">
 			<div class="text-sec4">
-				<h3 class="gra-text">1% Donation</h3>
-				<h6 class="gra-text-p">A monetary donation will be made to organization that is truly in need.</h6>
+				<h3 class="gra-text">3% Marketing & Development</h3>
+				<h6 class="gra-text-p">3% of each transaction will go towards market and development of the project.</h6>
 			</div>
 		</div>
 	</div>
@@ -287,7 +287,7 @@
 					<img src="images/Donut-Chart-Part3.png" class="sd-img">
 				</div>
 				<div class="col-lg-8 col-md-8 col-sm-8">
-				<h6 class="gra-text-p">1% for donation on each buy and sell transaction.</h6>
+				<h6 class="gra-text-p">3% Marketing & Development.</h6>
 			
 				</div>
 			</div>
@@ -373,7 +373,7 @@ use slippage 10% - 15%.
 	<div class="custom-container">
 	  <div class="row">
 		<div class="col-lg-12 sec7">
-			<h4 class="seen-pup ">ROADMAP</h4>
+			<h4 class="seen-pup ">Roadmap</h4>
 		</div>
 		</div>	   
 	  <div class="row">
@@ -519,7 +519,7 @@ use slippage 10% - 15%.
 		<div class="custom-container">
 		  <div class="row pb-4 bor-bt">
 			<div class="col-lg-8 col-md-12 col-sm-12" id="connectus">
-				<h4 class="fot-text">CONNECT WITH US</h4>
+				<h4 class="fot-text">Connect With Us</h4>
 				<span class="footer-icon"><a href=""><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
 				<span class="footer-icon"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
 				<!-- <span class="footer-icon"><img src="images/discord.svg" class="discord"></span> -->
