--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 					<img src="images/Donut-Chart-Part3.png" class="sd-img">
 				</div>
 				<div class="col-lg-8 col-md-8 col-sm-8">
-				<h6 class="gra-text-p">3% Marketing & Development.</h6>
+				<h6 class="gra-text-p" id="threeper">3% Marketing & Development.</h6>
 			
 				</div>
 			</div>
@@ -446,7 +446,7 @@ use slippage 10% - 15%.
     	<li>Big manual burn</li>
     </ul>
   </div>
-  <div class="card-header">Phase4</div>
+  <div class="card-header" id="ph4">Phase4</div>
 </div>
 	</div>
 </div>
