disc addd, roadmap changed

--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@ use slippage 10% - 15%.
  </div>
 	</div>
      <div class="col-lg-2 col-md-2 col-2 ">
-			<div class="imgtop">
+			<!-- <div class="imgtop">
 				<img src="images/Top.png" class="mymg" height="150px" />	
-			</div>	
+			</div>	 -->
      </div>
 	<div class="col-lg-5 col-md-5 col-sm-12">
 	 <div class="card border-dark mb-3" style="max-width: 35rem;">
@@ -429,9 +429,9 @@ use slippage 10% - 15%.
 	</div>
 
 <div class="col-lg-2 col-md-2 col-2 ">
-			<div class="imgbot">
+			<!-- <div class="imgbot">
 				<img src="images/Bottom.png" class="mymg" height="150px" />	
-			</div>	
+			</div>	 -->
 </div>
 
 <div class="col-lg-5 col-md-5 col-sm-12">
@@ -513,6 +513,40 @@ use slippage 10% - 15%.
       </div>
     </section>
 
+<section class="sec-9" id="disc">
+	<div class="custom-container">
+		<div class="row">
+		<div class="col-lg-12 sec9">
+			<h4 class="seen-pup">Disclaimer</h4>
+		</div>
+		</div>
+		<div class="row">
+		<div class="col-lg-12" id="disc_p">
+			<p>
+				The information provided in DogetheCop website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website’s content as such.
+</p>
+<p>
+The DogetheCop team does not recommend that any cryptocurrency should be bought, sold, or held by you.
+</p>
+<p>
+Do conduct your own due diligence and consult your financial advisor before making any investment decision.
+</p>
+<p>
+By purchasing DogetheCop token, you agree that you are not purchasing a security or investment and you agree to hold the team harmless and not liable for any losses or taxes you may incur. You also agree that the team is presenting the token “as is” and is not required to provide any support or services. Always make sure that you are in compliance with your local laws and regulations before you make any purchase.
+</p>
+<p>
+Please note there are always risks associated with smart-contracts. Please use at your own risk.
+</p>
+<p>
+DogetheCop Token is not a registered broker, analyst or investment advisor.
+</p>
+<p>
+We do not accept any liability for any loss or damage whatsoever caused in reliance upon such information or services. Executives from Reebok, P&G and Disney.
+			</p>
+		</div>
+		</div>
+	</div>
+</section>
 
 
 	<footer class="footer">
