--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 	        </li>
 	        <li><a href="#eco">Ecosystem</a></li>
 	        <li><a href="#faq">FAQ</a></li>
-	        <li><a target="_blank" href="">WhitePaper</a></li>
+	        <li><a target="_blank" href="https://whitepaper.dogethecop.com/
+">WhitePaper</a></li>
 	      </ul>	      
 	    </div>
 	  </div>
@@ -72,7 +73,7 @@
 				<div class="col-lg-4 col-md-4 col-sm-12">
 					<div class="wel-btn">				
 						<!-- <button type="button" class="btc btn-success btn-p top-btn"><a href="#" class="fa fa-twitter"></a><span class="so-text">PinkSale</span></button> -->
-						<img src="images/pinksale.png">
+						<a href=""><img src="images/pinksale.png"></a>
 					</div>
 				</div>
 			</div>
@@ -124,7 +125,7 @@
 		</div>
 		<div class="row">
 		<div class="con_add col-lg-10 col-md-10 col-sm-12">
-			<p class="ppd ">DTC:</p><input type="text" class="form-control set-fc" value="xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx" id="myInput"/>
+			<p class="ppd ">DTC:</p><input disabled="text" type="text" class="form-control set-fc" value="xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx-xxxx" id="myInput"/>
 		</div>
 		<div class="col-lg-1 col-md-1 col-sm-12">
 			<button type="button" class="btn btn-p choco_bar copy_btn" onclick="btn_clickcopy()">Copy</button>
@@ -554,12 +555,12 @@ We do not accept any liability for any loss or damage whatsoever caused in relia
 		  <div class="row pb-4 bor-bt">
 			<div class="col-lg-8 col-md-12 col-sm-12" id="connectus">
 				<h4 class="fot-text">Connect With Us</h4>
-				<span class="footer-icon"><a href=""><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
-				<span class="footer-icon"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
+				<span class="footer-icon"><a href="https://t.me/+y2Bu6eXtUWYyMWI1"><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
+				<span class="footer-icon"><a href=" https://twitter.com/DogetheCop"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
 				<!-- <span class="footer-icon"><img src="images/discord.svg" class="discord"></span> -->
-				<span class="footer-icon"><a href=""><i class="fa fa-medium fot" aria-hidden="true"></i></a></span>
-				<!-- <span class="footer-icon"><a href=""><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span>
-				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span> -->
+				<!-- <span class="footer-icon"><a href=""><i class="fa fa-medium fot" aria-hidden="true"></i></a></span>
+				<span class="footer-icon"><a href=""><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span> -->
+				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span>
 			</div>
 			<div class="col-lg-4 col-md-12 col-sm-12 mobile-res">
 				<div class="card foot-card">
