--- a/index.html
+++ b/index.html
@@ -30,9 +30,22 @@
 	</title><link rel="icon" type="image/png" href="./images/footerdog.png">
 	</head>
 
-	<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+		 <!-- ======= Top Bar ======= -->
+  <!-- <div id="topbar" class="d-flex align-items-center fixed-top">
+    <div class="container d-flex justify-content-between">
+      <div class="contact-info d-flex align-items-center">
+       <p>Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
+Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.</p>
+      </div>
+    </div>
+  </div> -->
+
+<div class="alert alert-info navbar-fixed-top" role="alert">Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
+Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.</div>
+
 	<header>
-	<nav id="myTopnav" class="navbar navbar-inverse navbar-fixed-top">
+	<nav id="myTopnav" class="navbar navbar-inverse navbar-fixed-top" style="margin-top: 3%;">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
