alert, disc chngs

--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
     </div>
   </div> -->
 
-<div class="alert alert-info navbar-fixed-top" role="alert">Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
-Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.</div>
+<!-- <div class="alert alert-info navbar-fixed-top" role="alert ">Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
+Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.</div> -->
+
+<div class="alert alert-info alert-dismissible" role="alert" style="margin-bottom: 0px;">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
+Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.
+</div>
 
 	<header>
-	<nav id="myTopnav" class="navbar navbar-inverse navbar-fixed-top" style="margin-top: 3%;">
+	<nav id="myTopnav" class="navbar navbar-inverse "> <!--style="margin-top: 3%;" navbar-fixed-top -->
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -83,10 +89,13 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 			<p class="wel-para">Metaverse Gaming based on PLAY2EARN gaming concept. One of the most highly rewarded tokens with a reward of 11%. The longer you stay, the more you earn.</p>
 			<p class="wel-para1">Pre-sales starts from 23rd December</p>
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-12">
-					<div class="wel-btn">				
+				<div class="wel-btn col-lg-4 col-md-4 col-sm-12">
+					<!-- <div class="wel-btn col-lg-6">				 -->
 						<!-- <button type="button" class="btc btn-success btn-p top-btn"><a href="#" class="fa fa-twitter"></a><span class="so-text">PinkSale</span></button> -->
-						<a href=""><img src="images/pinksale.png"></a>
+						<a href=""><img src="images/PinkSale.png"></a>
+					</div>
+					<div class="wel-btn col-lg-4 col-md-4 col-sm-12">	
+						<a href=""><img src="images/PancackeSwap.png"></a>
 					</div>
 				</div>
 			</div>
@@ -384,7 +393,7 @@ use slippage 10% - 15%.
 	</section>
 
 	<section class="sec-7">
-	<div class="custom-container">
+	<div class="container">
 	  <div class="row">
 		<div class="col-lg-12 sec7">
 			<h4 class="seen-pup ">Roadmap</h4>
@@ -528,7 +537,7 @@ use slippage 10% - 15%.
     </section>
 
 <section class="sec-9" id="disc">
-	<div class="custom-container">
+	<div class="custom-container" style="text-align: center;">
 		<div class="row">
 		<div class="col-lg-12 sec9">
 			<h4 class="seen-pup">Disclaimer</h4>
@@ -568,12 +577,20 @@ We do not accept any liability for any loss or damage whatsoever caused in relia
 		  <div class="row pb-4 bor-bt">
 			<div class="col-lg-8 col-md-12 col-sm-12" id="connectus">
 				<h4 class="fot-text">Connect With Us</h4>
-				<span class="footer-icon"><a href="https://t.me/+y2Bu6eXtUWYyMWI1"><i class="fa fa-telegram fot" aria-hidden="true"></i> </a></span>
+				<a href="https://t.me/+y2Bu6eXtUWYyMWI1" class="footer-icon"><img src="images/Telegram.png"></a>
+				<a href="https://twitter.com/DogetheCop" class="footer-icon"><img src="images/Twitter.png"></a>
+				<a href="" class="footer-icon"><img src="images/Medium.png"></a>
+
+				<!-- <span class="footer-icon">
+					<a href="https://t.me/+y2Bu6eXtUWYyMWI1"><i class="fa fa-telegram fot" aria-hidden="true"></i> </a>
+				</span>
 				<span class="footer-icon"><a href=" https://twitter.com/DogetheCop"><i class="fa fa-twitter fot" aria-hidden="true"></i></span>
+				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span> -->
+
 				<!-- <span class="footer-icon"><img src="images/discord.svg" class="discord"></span> -->
 				<!-- <span class="footer-icon"><a href=""><i class="fa fa-medium fot" aria-hidden="true"></i></a></span>
 				<span class="footer-icon"><a href=""><i class="fa fa-reddit fot" aria-hidden="true"></i></a></span> -->
-				<span class="footer-icon"><i class="fa fa-github fot" aria-hidden="true"></i></span>
+				
 			</div>
 			<div class="col-lg-4 col-md-12 col-sm-12 mobile-res">
 				<div class="card foot-card">
