--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 
 <!-- <div class="alert alert-info navbar-fixed-top" role="alert ">Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
 Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.</div> -->
-
 <div class="alert alert-info alert-dismissible" role="alert" style="margin-bottom: 0px;">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   Our early investor round is closed and pre-sales will start on 27th December on the Pinksale. 
 Only 600 Whitelisted users will secure a place in the token sale. Here is the link to get a whitelist.
 </div>
 
+
 	<header>
-	<nav id="myTopnav" class="navbar navbar-inverse "> <!--style="margin-top: 3%;" navbar-fixed-top -->
+	<nav id="myTopnav" class="navbar navbar-inverse" > <!--style="margin-top: 3%;" navbar-fixed-top -->
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -76,6 +76,8 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 	  </div>
 	</nav>
 	</header>
+
+
 
     <section class="sec-1" id="home">
 	<div class="container">
@@ -540,7 +542,7 @@ use slippage 10% - 15%.
 	<div class="custom-container" style="text-align: center;">
 		<div class="row">
 		<div class="col-lg-12 sec9">
-			<h4 class="seen-pup">Disclaimer</h4>
+			<h4 class="seen-disc">Disclaimer</h4>
 		</div>
 		</div>
 		<div class="row">
@@ -598,7 +600,7 @@ We do not accept any liability for any loss or damage whatsoever caused in relia
 						<img class="footer-logo" src="images/Logo.png">
 					</div>
 					<div class="card-footer">
-						<h6 class="dwp"><a class="dwn-wp" target="_blank" href="">DOWNLOAD WHITEPAPER</a></h6>
+						<h6 class="dwp"><a class="dwn-wp" target="_blank" href="https://whitepaper.dogethecop.com/">Download Whitepaper</a></h6>
 					</div>
 				</div>
 			</div>
