--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 		</div>
 		  <div class="row">
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-				<a href=""><img src="images/img1.png"></a>
+				<a href=""><img src="images/poco_coins.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-				<a href=""><img src="images/img2.png"></a>
+				<a href=""><img src="images/bsc1.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
-				<a href=""><img src="images/img3.png"></a>
+				<a href=""><img src="images/pancakeswap.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-3 col-md-3 col-sm-6 col-xs-6">
 				<a href=""><img src="images/dext.png"></a>
@@ -130,13 +130,13 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 		  </div>
 		  <div class="row">
 			<div class="img-sec2 col-lg-4 col-md-4 col-sm-6 col-xs-6">
-				<a href=""><img src="images/img5.png"></a>
+				<a href=""><img class="colimg1" src="images/market.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-4 col-md-4 col-sm-6 col-xs-6">
-				<a href=" "><img src="images/img6.png"></a>
+				<a href=" "><img  class="colimg2" src="images/Yahoo.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href=""><img src="images/img7.png"></a>
+				<a href=""><img  class="colimg3" src="images/google_news.png"></a>
 			</div>
 		  </div>
 		  <div class="bordertop" style="border-top: 1px solid #254C84;">
@@ -579,9 +579,9 @@ We do not accept any liability for any loss or damage whatsoever caused in relia
 		  <div class="row pb-4 bor-bt">
 			<div class="col-lg-8 col-md-12 col-sm-12" id="connectus">
 				<h4 class="fot-text">Connect With Us</h4>
-				<a href="https://t.me/+y2Bu6eXtUWYyMWI1" class="footer-icon"><img src="images/Telegram.png"></a>
-				<a href="https://twitter.com/DogetheCop" class="footer-icon"><img src="images/Twitter.png"></a>
-				<a href="" class="footer-icon"><img src="images/Medium.png"></a>
+				<a href="https://t.me/+y2Bu6eXtUWYyMWI1" target="_blank" class="footer-icon"><img src="images/Telegram.png"></a>
+				<a href="https://twitter.com/DogetheCop" target="_blank" class="footer-icon"><img src="images/Twitter.png"></a>
+				<a href="" class="footer-icon" target="_blank"><img src="images/github.png"></a>
 
 				<!-- <span class="footer-icon">
 					<a href="https://t.me/+y2Bu6eXtUWYyMWI1"><i class="fa fa-telegram fot" aria-hidden="true"></i> </a>
