--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 				<div class="wel-btn col-lg-4 col-md-4 col-sm-12">
 					<!-- <div class="wel-btn col-lg-6">				 -->
 						<!-- <button type="button" class="btc btn-success btn-p top-btn"><a href="#" class="fa fa-twitter"></a><span class="so-text">PinkSale</span></button> -->
-						<a href=""><img src="images/PinkSale.png"></a>
+						<a href=""><img src="images/pinks.png"></a>
 					</div>
 					<div class="wel-btn col-lg-4 col-md-4 col-sm-12">	
 						<a href=""><img src="images/PancackeSwap.png"></a>
@@ -136,7 +136,7 @@ Only 600 Whitelisted users will secure a place in the token sale. Here is the li
 				<a href=" "><img  class="colimg2" src="images/Yahoo.png"></a>
 			</div>
 			<div class="img-sec2 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				<a href=""><img  class="colimg3" src="images/google_news.png"></a>
+				<a href=""><img  class="colimg3" src="images/Google_news.png"></a>
 			</div>
 		  </div>
 		  <div class="bordertop" style="border-top: 1px solid #254C84;">
